[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/recipe/pegs_on_string.png" type="Texture" id=1]
[ext_resource path="res://components/receipt/ReceiptHolder.gd" type="Script" id=2]

[node name="RecipeHolder" type="Node2D"]
script = ExtResource( 2 )

[node name="PegsOnString1" type="Sprite" parent="."]
position = Vector2( 65, 32 )
z_index = 500
z_as_relative = false
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Position2D" type="Position2D" parent="PegsOnString1"]
position = Vector2( 0, 25 )

[node name="PegsOnString2" type="Sprite" parent="."]
position = Vector2( 168, 32 )
z_index = 500
z_as_relative = false
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Position2D" type="Position2D" parent="PegsOnString2"]
position = Vector2( 0, 25 )

[node name="PegsOnString3" type="Sprite" parent="."]
position = Vector2( 281, 32 )
z_index = 500
z_as_relative = false
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Position2D" type="Position2D" parent="PegsOnString3"]
position = Vector2( 0, 25 )
